# genOS-desktop

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
daemon/: Cargo.toml
daemon/src/: main.rs
mcp/: Cargo.toml
mcp/src/: lib.rs
mind/: Cargo.toml
mind/src/: lib.rs
