[workspace]
members = [
    "daemon",
    "mcp",
    "mind",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GENOS Project"]
license = "MIT"
repository = "https://github.com/igorbrasilx/genOS-desktop"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
