[package]
name = "genos-mind"
description = "GENOS Mind — Personal Cognitive Layer and second brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
